# my-cmake-test

./: .gitignore
t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt  COPYRIGHT  README
t2/doc/: hello.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.c
t7/: CMakeLists.txt
t7/src/: CMakeLists.txt  main.c
t7/src/hs/: CMakeLists.txt  HasMember.hpp  HighResolutionClock.hpp  IntTypes.hpp  Stamp.cpp  Stamp.hpp  ToString.hpp  Toolchain.hpp
t8/: CMakeLists.txt  main.c  main.cpp
t8/hello/: CMakeLists.txt  hello.c  hello.h
t8/hs/: HighResolutionClock.hpp  IntTypes.hpp  Stamp.cpp  Stamp.hpp
t8/world/: CMakeLists.txt  world.c  world.h
t9/: CMakeLists.txt
t9/src/: CMakeLists.txt
t9/src/math/: CMakeLists.txt  MathFunctions.cc
